Add missing texture file, Add KIS Support, Hopefully fix any loading issues in 1.11, Real Antenna Fixes, Change COM to help RCS Control (WIP), Hopefully make the Starship Lunar Legs work for good, Other general config/model fixes.

--- a/GameData/ROCapsules/PartConfigs/Dragon/KK/Dragon2CargoCM.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/KK/Dragon2CargoCM.cfg
@@ -72,6 +72,7 @@ PART
 	skinMassPerArea = 4
 	bodyLiftOnlyUnattachedLift = True
 	bodyLiftOnlyAttachName = bottom
+	fuelCrossFeed = True
 
 	//	============================================================================
 	//	Animations and Textures
@@ -161,7 +162,7 @@ PART
 	MODULE
 	{
 		name = AdjustableCoMShifter
-		DescentModeCoM = 0, 0, 0.2
+		DescentModeCoM = 0, 0, -0.18
 	}
 
 	MODULE
@@ -172,6 +173,7 @@ PART
 		startEventGUIName = Open Cone
 		endEventGUIName	 = Close Cone
 		layer = 0
+		useMultipleDragCubes = true
 	}
 
 	MODULE
@@ -186,28 +188,13 @@ PART
 
 	MODULE
 	{
-		name = ModuleLiftingSurface
-		useInternalDragModel = False
-		deflectionLiftCoeff = 1.4
-		liftingSurfaceCurve = CapsuleBottom
-		disableBodyLift = False
-		omnidirectional = False
-		perpendicularOnly = True
-		transformDir = Y
-		transformSign = -1
-		nodeEnabled = True
-		attachNodeName = bottom
-	}
-
-	MODULE
-	{
 		name = ModuleRCSFX
-		stagingEnabled = False
+		stagingEnabled = True
 		thrusterTransformName = draco
 		thrusterPower = 0.4
 		resourceFlowMode = STAGE_PRIORITY_FLOW
 		runningEffectName = running1
-		rcsEnabled = True
+		showToggles = False
 		enableYaw = True
 		enablePitch = True
 		enableRoll = True
@@ -217,12 +204,12 @@ PART
 		PROPELLANT
 		{
 			name = MMH
-			ratio = 0.5629
+			ratio = 0.559
 		}
 		PROPELLANT
 		{
 			name = NTO
-			ratio = 0.4371
+			ratio = 0.441
 		}
 		atmosphereCurve
 		{
@@ -234,12 +221,12 @@ PART
 	MODULE
 	{
 		name = ModuleRCSFX
-		stagingEnabled = False
+		stagingEnabled = True
 		thrusterTransformName = draco_top
 		thrusterPower = 0.4
 		resourceFlowMode = STAGE_PRIORITY_FLOW
 		runningEffectName = running2
-		rcsEnabled = True
+		showToggles = False
 		enableYaw = False
 		enablePitch = False
 		enableRoll = False
@@ -249,12 +236,12 @@ PART
 		PROPELLANT
 		{
 			name = MMH
-			ratio = 0.5629
+			ratio = 0.559
 		}
 		PROPELLANT
 		{
 			name = NTO
-			ratio = 0.4371
+			ratio = 0.441
 		}
 		atmosphereCurve
 		{
@@ -267,21 +254,19 @@ PART
 	{
 		name = ModuleFuelTanks
 		type = ServiceModule
-		volume = 1140.5
+		volume = 1149.039
 		basemass = -1
 		TANK
 		{
 			name = MMH
-			amount = 637.5
-			maxAmount = 637.5
-			isTweakable = False
+			amount = 642.31
+			maxAmount = 642.31
 		}
 		TANK
 		{
 			name = NTO
-			amount = 502.5
-			maxAmount = 502.5
-			isTweakable = False
+			amount = 506.72
+			maxAmount = 506.72
 		}
 		TANK
 		{
@@ -290,6 +275,22 @@ PART
 			maxAmount = 50000
 			isTweakable = False
 		}
+	}
+
+	MODULE:NEEDS[KIS]
+	{
+		name = ModuleKISInventory
+		maxVolume = 2000
+		externalAccess = false
+		internalAccess = true
+		slotsX = 3
+		slotsY = 3
+		slotSize = 50
+		itemIconResolution = 128
+		selfIconResolution = 128
+		openSndPath = KIS/Sounds/containerOpen
+		closeSndPath = KIS/Sounds/containerClose
+		defaultMoveSndPath = KIS/Sounds/itemMove
 	}
 }
 
@@ -304,15 +305,15 @@ PART
 	MODULE
 	{
 		name = ModuleRealAntenna
-		antennaDiameter = 0.8
-		RFBand = S	//Default to S-band
+		referenceGain = 1.5
+		RFBand = UHF		//Default to UHF-band
 	}
 
 	MODULE
 	{
 		name = ModuleRealAntenna
-		referenceGain = 1.5
-		RFBand = UHF		//Default to UHF-band
+		antennaDiameter = 0.8
+		RFBand = S	//Default to S-band
 	}
 }
 
@@ -334,7 +335,8 @@ PART
 		{
 			name = Food
 			amount = 0
-			maxAmount = 10061.78
+			maxAmount = 1061.78
+
 		}
 
 		TANK
