--- a/GameData/ROCapsules/PartConfigs/Dragon/KK/Dragon2Cover1.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/KK/Dragon2Cover1.cfg
@@ -56,7 +56,7 @@ PART
 	emissiveConstant = 0.6
 	thermalMassModifier = 1.0
 	skinMassPerArea = 4
-	fuelCrossFeed = True
+	fuelCrossFeed = False
 	PhysicsSignificance = 0
 	stagingIcon = DECOUPLER_HOR
 	stageOffset = 1
