--- a/GameData/ROCapsules/PartConfigs/Dragon/KK/Dragon2DP.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/KK/Dragon2DP.cfg
@@ -18,8 +18,8 @@ PART
 	scale = 1.0
 	rescaleFactor = 1.0
 
-	node_stack_top = 0.0, 0.090922, 0.0, 0.0, 1.0, 0, 1
-	node_stack_bottom = 0.0, -0.0, 0.0, 0.0, -1.0, 0, 1
+	node_stack_top = 0.0, 0.089006, 0.0, 0.0, 1.0, 0, 1
+	node_stack_bottom = 0.0, 0.0, 0.0, 0.0, -1.0, 0, 1
 
 	attachRules = 1,0,1,0,0
 
@@ -56,6 +56,7 @@ PART
 	emissiveConstant = 0.6
 	thermalMassModifier = 1.0
 	skinMassPerArea = 4
+	fuelCrossFeed = True
 
 	//	============================================================================
 	//	Modules and Resources
@@ -66,7 +67,6 @@ PART
 		name = ModuleDockingNode
 		referenceAttachNode = top
 		nodeType = NASADock
-		gendered = False
 		acquireForce = 0.5
 		acquireMinFwdDot = 0.8
 		acquireminRollDot = -3.40282347E+38
@@ -79,5 +79,16 @@ PART
 		minDistanceToReEngage = 0.25
 		undockEjectionForce = 0.1
 		stagingEnabled = False
+	}
+
+	MODULE
+	{
+		name = ModuleAnimateGeneric
+		animationName = KK_SpX_dockingport
+		isOneShot = false
+		actionGUIName = Toggle Docking Port
+		startEventGUIName = Extend Docking Port
+		endEventGUIName = Retract Docking Port
+		useMultipleDragCubes = true
 	}
 }
