--- a/GameData/ROCapsules/PartConfigs/Dragon/KK/Dragon2HS.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/KK/Dragon2HS.cfg
@@ -68,7 +68,7 @@
 	breakingForce = 200
 	breakingTorque = 200
 	crashTolerance = 12
-	fuelCrossFeed = False
+	fuelCrossFeed = True
 	PhysicsSignificance = 0
 	stageOffset = 1
 	childStageOffset = 1
@@ -98,5 +98,16 @@
 		transformSign = -1
 		nodeEnabled = True
 		attachNodeName = bottom
+	}
+}
+
+// Specific adjustments after default setup
+@PART[ROC-Dragon2HS]:AFTER[RealismOverhaul_HeatShield]
+{
+	@MODULE[ModuleAblator]
+	{
+		charModuleName = HeatShieldCharAnim
+		charMin = 0
+		charMax = 1
 	}
 }
