--- a/GameData/ROCapsules/PartConfigs/Dragon/KK/Dragon2SM.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/KK/Dragon2SM.cfg
@@ -20,7 +20,8 @@
 
 	node_stack_top = 0.0, 1.820601, 0.0, 0.0, 1.0, 0.0, 3
 	node_stack_bottom = 0.0, -1.8, 0.0, 0.0, -1.0, 0.0, 3
-	node_stack_trunk = 0.0, 1.18, 0.0, 0.0, -1.0, 0.0, 3
+
+	CoMOffset = 0.0, 2.50, 0.0
 
 	attachRules = 1,0,1,1,0
 
@@ -68,14 +69,19 @@
 
 	MODULE
 	{
-		name = ModuleDecouple
-		menuName = Decouple Trunk Storage
-		ejectionForce = 10
-		isOmniDecoupler = false
-		explosiveNodeID = trunk
+		name = ModuleFuelTanks
+		type = ServiceModule
+		volume = 50
+		basemass = -1
+		TANK
+		{
+			name = ElectricCharge
+			amount = 50000
+			maxAmount = 50000
+		}
 	}
 
-	MODULE:NEEDS[!AnimatedDecouplers]
+	MODULE
 	{
 		name = ModuleDecouple
 		menuName = Jettison Trunk
@@ -84,25 +90,44 @@
 		explosiveNodeID = top
 	}
 
-	MODULE:NEEDS[!AnimatedDecouplers]
+	MODULE
 	{
 		name = ModuleAnimateGeneric
 		animationName = KK_SpX_umbilical
 		actionGUIName = Toggle Umbilical
 		startEventGUIName = Open Umbilical
 		endEventGUIName = Close Umbilical
+		useMultipleDragCubes = false
 	}
 
-	MODULE:NEEDS[AnimatedDecouplers]
+	MODULE:NEEDS[KIS]
 	{
-		name = ModuleAnimatedDecoupler
-		menuName = Jettison Trunk
-		ejectionForce = 100
-		explosiveNodeID = top
-		staged = true
-		animationName = KK_SpX_umbilical
-		waitForAnimation = true
-		layer = 1
+		name = ModuleKISInventory
+		maxVolume = 2000
+		externalAccess = true
+		internalAccess = false
+		slotsX = 3
+		slotsY = 3
+		slotSize = 50
+		itemIconResolution = 128
+		selfIconResolution = 128
+		openSndPath = KIS/Sounds/containerOpen
+		closeSndPath = KIS/Sounds/containerClose
+		defaultMoveSndPath = KIS/Sounds/itemMove
+	}
+
+	MODULE
+	{
+		name = ModuleActiveRadiator
+		maxEnergyTransfer = 10000
+		overcoolFactor = 0.25
+		isCoreRadiator = true
+		parentCoolingOnly = true
+		RESOURCE
+		{
+			name = ElectricCharge
+			rate = 0.100
+		}
 	}
 
 	MODULE
@@ -121,7 +146,7 @@
 
 	SolarConfig
 	{
-		area = 25.45
+		area = 22.6937
 		level = 7
 		type = static
 	}
