--- a/GameData/ROCapsules/PartConfigs/Dragon/PhoenixIndustries/DragonAdapter.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/PhoenixIndustries/DragonAdapter.cfg
@@ -56,7 +56,6 @@ PART
 	crashTolerance = 12
 	maxTemp = 673.15
 	skinMaxTemp = 773.15
-	fuelCrossFeed = False
 	stagingIcon = DECOUPLER_HOR
 	stageOffset = 1
 	childStageOffset = 1
@@ -69,8 +68,8 @@ PART
 	{
 		name = ModuleDecouple
 		menuName = Decouple Vehicle Adapter
-		ejectionForce = 50
-		isOmniDecoupler = false
+		ejectionForce = 25
+		isOmniDecoupler = False
 		explosiveNodeID = top
 	}
 }
