--- a/GameData/ROCapsules/PartConfigs/Dragon/PhoenixIndustries/DragonCap.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/PhoenixIndustries/DragonCap.cfg
@@ -18,14 +18,12 @@ PART
 
 	scale = 1.0
 	rescaleFactor = 1.5
-	
-	node_stack_bottom = 0.0, 0.242667, 0.0, 0.0, -1.0, 0.0, 1
 
-	CenterOfDisplacement = 0.0, 0.2, 0.0
+	node_stack_bottom = 0.0, 0.1986495, 0.0, 0.0, -1.0, 0.0, 1
 
 	attachRules = 1,0,1,0,0
 
-	fx_gasBurst_white = 0.0, 0.266667, 0.0, 0.0, 1.0, 0.0, decouple
+	fx_gasBurst_white = 0.0, 0.1986495, 0.0, 0.0, 1.0, 0.0, decouple
 	sound_decoupler_fire = decouple
 
 	//	============================================================================
@@ -60,7 +58,6 @@ PART
 	emissiveConstant = 0.6
 	thermalMassModifier = 1.0
 	skinMassPerArea = 4
-	fuelCrossFeed = True
 	PhysicsSignificance = 0
 	stagingIcon = DECOUPLER_HOR
 	stageOffset = 1
@@ -74,16 +71,8 @@ PART
 	{
 		name = ModuleDecouple
 		menuName = Jettison Nose Cone
-		ejectionForce = 10
-		isOmniDecoupler = false
+		ejectionForce = 5
+		isOmniDecoupler = False
 		explosiveNodeID = bottom
-	}
-}
-
-@PART[ROC-DragonCap]:AFTER[FerramAerospaceResearch]
-{
-	@MODULE[GeometryPartModule]
-	{
-		%forceUseMeshes = True
 	}
 }
