--- a/GameData/ROCapsules/PartConfigs/Dragon/PhoenixIndustries/DragonDP.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/PhoenixIndustries/DragonDP.cfg
@@ -13,14 +13,14 @@ PART
 	MODEL
 	{
 		model = ROCapsules/Assets/PhoenixIndustries/Dragon/DragonDP
-		scale = 0.88, 0.88, 0.88
+		scale = 1.0, 1.0, 1.0
 	}
 
 	scale = 1.0
 	rescaleFactor = 1.5
 
-	node_stack_top = 0.0, 0.061559, 0.0, 0.0, 1.0, 0.0, 1
-	node_stack_bottom = 0.0, -0.06, 0.0, 0.0, -1.0, 0.0, 1
+	node_stack_top = 0.0, 0.07664, 0.0, 0.0, 1.0, 0.0, 1
+	node_stack_bottom = 0.0, -0.055, 0.0, 0.0, -1.0, 0.0, 1
 
 	attachRules = 1,0,1,0,0
 
@@ -57,6 +57,7 @@ PART
 	emissiveConstant = 0.6
 	thermalMassModifier = 1.0
 	skinMassPerArea = 4
+	fuelCrossFeed = True
 
 	//	============================================================================
 	//	Modules and Resources
