--- a/GameData/ROCapsules/PartConfigs/Dragon/PhoenixIndustries/DragonHS.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/PhoenixIndustries/DragonHS.cfg
@@ -56,7 +56,7 @@ PART
 	breakingForce = 200
 	breakingTorque = 200
 	crashTolerance = 12
-	fuelCrossFeed = False
+	fuelCrossFeed = True
 	PhysicsSignificance = 0
 	stageOffset = 1
 	childStageOffset = 1
@@ -86,5 +86,16 @@ PART
 		transformSign = -1
 		nodeEnabled = True
 		attachNodeName = bottom
+	}
+}
+
+// Specific adjustments after default setup
+@PART[ROC-DragonHS]:AFTER[RealismOverhaul_HeatShield]
+{
+	@MODULE[ModuleAblator]
+	{
+		charModuleName = HeatShieldCharAnim
+		charMin = 0
+		charMax = 1
 	}
 }
