--- a/GameData/ROCapsules/PartConfigs/Dragon/PhoenixIndustries/DragonSC.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/PhoenixIndustries/DragonSC.cfg
@@ -19,7 +19,7 @@ PART
 	scale = 1.0
 	rescaleFactor = 1.5
 
-	node_stack_bottom = 0.0, 0.800033, 0.0, 0.0, -1.0, 0.0, 2
+	node_stack_bottom = 0.0, 0.800033, 0.0, -1.0, 0.0, 0.0, 2
 
 	attachRules = 1,0,1,0,0
 
@@ -55,7 +55,6 @@ PART
 	crashTolerance = 12
 	maxTemp = 673.15
 	skinMaxTemp = 773.15
-	fuelCrossFeed = True
 	PhysicsSignificance = 0
 	stagingIcon = DECOUPLER_HOR
 	stageOffset = 1
@@ -68,9 +67,9 @@ PART
 	MODULE
 	{
 		name = ModuleDecouple
-		menuName = Jettison Solar Panel Fairing
-		ejectionForce = 10
-		isOmniDecoupler = false
+		menuName = Jettison SP Cover
+		ejectionForce = 5
+		isOmniDecoupler = False
 		explosiveNodeID = bottom
 	}
 }
