--- a/GameData/ROCapsules/PartConfigs/DragonXL/PhoenixIndustries Dragon/TU_Support_DragonXL.cfg
+++ b/GameData/ROCapsules/PartConfigs/DragonXL/PhoenixIndustries Dragon/TU_Support_DragonXL.cfg
@@ -2,6 +2,11 @@
 //	PhoenixIndustries Dragon XL Textures Unlimited Support
 //	============================================================================
 
+@REFLECTION_CONFIG[default]
+{
+	%enabled = true
+}
+
 KSP_MODEL_SHADER
 {
 	name = ROC-DragonXLPhoenixIndustries
@@ -20,17 +25,17 @@ KSP_MODEL_SHADER
 		PROPERTY
 		{
 			name = _Color
-			color = 2.0, 2.0, 2.0
+			color = 1.5, 1.5, 1.5 
 		}
 		PROPERTY
 		{
 			name = _Metal
-			float = 0.65
+			float = 0.7
 		}
 		PROPERTY
 		{
 			name = _Smoothness
-			float = 0.75
+			float = 0.65
 		}
 	}
 }
