--- a/GameData/ROCapsules/PartConfigs/DragonXL/Vader111/DragonXL.cfg
+++ b/GameData/ROCapsules/PartConfigs/DragonXL/Vader111/DragonXL.cfg
@@ -18,10 +18,9 @@ PART
 	scale = 1.0
 	rescaleFactor = 1.0
 
-	node_stack_top = 0.0, 4.83112, 0.0, 0.0, 1.0, 0.0, 2
+	node_stack_top = 0.0, 4.835, 0.0, 0.0, 1.0, 0.0, 2
 	node_stack_SolarAttach1 = 2.01807, -3.48542, 0.26229, 0.0, -1.0, 0.0, 2
 	node_stack_SolarAttach2 = -2.01807, -3.48542, -0.26229, 0.0, 1.0, 0.0, 2
-	node_stack_Trunk = 0.0, -0.628486, 0.0, 0.0, -1.0, 0.0, 1
 
 	attachRules = 1,0,1,1,0
 
@@ -130,31 +129,22 @@ PART
 
 	MODULE
 	{
-		name = ModuleDecouple
-		menuName = Decouple Trunk Storage
-		ejectionForce = 10
-		isOmniDecoupler = false
-		explosiveNodeID = Trunk
-	}
-
-	MODULE
-	{
 		name = ModuleRCSFX
-		stagingEnabled = False
+		stagingEnabled = True
 		thrusterTransformName = rcsThrust
 		thrusterPower = 0.4
 		resourceFlowMode = STAGE_PRIORITY_FLOW
 		runningEffectName = running1
-		rcsEnabled = True
+		showToggles = False
 		PROPELLANT
 		{
 			name = MMH
-			ratio = 0.5629
+			ratio = 0.559
 		}
 		PROPELLANT
 		{
 			name = NTO
-			ratio = 0.4371
+			ratio = 0.441
 		}
 		atmosphereCurve
 		{
@@ -167,29 +157,56 @@ PART
 	{
 		name = ModuleFuelTanks
 		type = ServiceModule
-		volume = 1326.5
+		volume = 1149.039
 		basemass = -1
 		TANK
 		{
 			name = MMH
-			amount = 741.13
-			maxAmount = 741.13
-			isTweakable = False
+			amount = 642.31
+			maxAmount = 642.31
 		}
 		TANK
 		{
 			name = NTO
-			amount = 584.685
-			maxAmount = 584.685
-			isTweakable = False
+			amount = 506.72
+			maxAmount = 506.72
 		}
 		TANK
 		{
 			name = ElectricCharge
-			amount = 50000
-			maxAmount = 50000
-			isTweakable = False
+			amount = 100000
+			maxAmount = 100000
 		}
+	}
+
+	MODULE
+	{
+		name = ModuleActiveRadiator
+		maxEnergyTransfer = 10000
+		overcoolFactor = 0.25
+		isCoreRadiator = true
+		parentCoolingOnly = true
+		RESOURCE
+		{
+			name = ElectricCharge
+			rate = 0.100
+		}
+	}
+
+	MODULE:NEEDS[KIS]
+	{
+		name = ModuleKISInventory
+		maxVolume = 5000
+		externalAccess = false
+		internalAccess = true
+		slotsX = 4
+		slotsY = 4
+		slotSize = 50
+		itemIconResolution = 128
+		selfIconResolution = 128
+		openSndPath = KIS/Sounds/containerOpen
+		closeSndPath = KIS/Sounds/containerClose
+		defaultMoveSndPath = KIS/Sounds/itemMove
 	}
 }
 
@@ -204,15 +221,15 @@ PART
 	MODULE
 	{
 		name = ModuleRealAntenna
-		antennaDiameter = 0.8
-		RFBand = S	//Default to S-band
+		referenceGain = 1.5
+		RFBand = UHF		//Default to UHF-band
 	}
 
 	MODULE
 	{
 		name = ModuleRealAntenna
-		referenceGain = 1.5
-		RFBand = UHF		//Default to UHF-band
+		antennaDiameter = 0.8
+		RFBand = S	//Default to S-band
 	}
 }
 
