--- a/GameData/ROCapsules/PartConfigs/DragonXL/Vader111/TU_Support_DragonXL.cfg
+++ b/GameData/ROCapsules/PartConfigs/DragonXL/Vader111/TU_Support_DragonXL.cfg
@@ -2,6 +2,11 @@
 //	Vader111 Dragon XL Textures Unlimited Support
 //	============================================================================
 
+@REFLECTION_CONFIG[default]
+{
+	%enabled = true
+}
+
 KSP_MODEL_SHADER
 {
 	name = ROC-DragonXLVader111
@@ -21,12 +26,12 @@ KSP_MODEL_SHADER
 		PROPERTY
 		{
 			name = _Metal
-			float = 0.25
+			float = 0.5
 		}
 		PROPERTY
 		{
 			name = _Smoothness
-			float = 0.5
+			float = 0.4
 		}
 	}
 }
@@ -43,7 +48,7 @@ KSP_MODEL_SHADER
 
 		mesh = DragonXLTexture4
 
-		PROPERTY
+        PROPERTY
 		{
 			name = _Color
 			color = 2.0, 2.0, 2.0
@@ -51,12 +56,12 @@ KSP_MODEL_SHADER
 		PROPERTY
 		{
 			name = _Metal
-			float = 0.65
+			float = 0.5
 		}
 		PROPERTY
-		{
+			{
 			name = _Smoothness
-			float = 0.75
+			float = 0.7
 		}
 	}
 }
