--- a/GameData/ROCapsules/PartConfigs/Starship/Vader111/StarshipLunarDP.cfg
+++ b/GameData/ROCapsules/PartConfigs/Starship/Vader111/StarshipLunarDP.cfg
@@ -18,7 +18,7 @@ PART
 	scale = 1.0
 	rescaleFactor = 1.0
 
-	node_stack_top = 0.0, 0.52, 0.0, 0.0, 1.0, 0.0, 1
+	node_stack_top = 0.0, 0.511457, 0.0, 0.0, 1.0, 0.0, 1
 	node_stack_bottom = 0.0, -0.001272, 0.0, 0.0, -1.0, 0.0, 1
 
 	attachRules = 1,0,1,0,0
@@ -32,24 +32,24 @@ PART
 	entryCost = 1
 	category = Coupling
 	subcategory = 0
-	title = Starship Lunar Docking Port (RCS)
+	title = Starship Lunar Docking Port & RCS
 	manufacturer = SpaceX
 	description = Starship Lunar Docking Port With RCS.
-	tags = Spacex, Starship, Lunar, Artemis
+	tags = Spacex, Starship, Lunar, Artemis, Docking
 	bulkheadProfiles = size2
 
 	//	============================================================================
 	//	Thermo, Durability
 	//	============================================================================
 
-	mass = 0.5
+	mass = 1.0
 	dragModelType = default
 	breakingForce = 250
 	breakingTorque = 250
 	maximum_drag = 0.20
 	minimum_drag = 0.15
 	angularDrag = 2
-	crashTolerance = 12
+	crashTolerance = 20
 	maxTemp = 973.15
 	skinMaxTemp = 1073.15
 	fuelCrossFeed = True
@@ -99,26 +99,26 @@ PART
 	MODULE
 	{
 		name = ModuleRCSFX
-		stagingEnabled = False
+		stagingEnabled = True
 		thrusterTransformName = rcsThrust
-		thrusterPower = 20.26
+		thrusterPower = 30
 		resourceFlowMode = STAGE_PRIORITY_FLOW
 		runningEffectName = running1
-		rcsEnabled = True
+		showToggles = False
 		PROPELLANT
 		{
 			name = LqdMethane
-			ratio = 0.05
+			ratio = 0.4320
 		}
 		PROPELLANT
 		{
 			name = LqdOxygen
-			ratio = 0.33
+			ratio = 0.5680
 		}
 		atmosphereCurve
 		{
-			key = 0 310
-			key = 1 174
+			key = 0 330
+			key = 1 240
 		}
 	}
 
@@ -127,7 +127,6 @@ PART
 		name = ModuleDockingNode
 		referenceAttachNode = top
 		nodeType = NASADock
-		gendered = False
 		acquireForce = 0.5
 		acquireMinFwdDot = 0.8
 		acquireminRollDot = -3.40282347E+38
