--- a/GameData/ROCapsules/PartConfigs/Starship/Vader111/StarshipLunarTank.cfg
+++ b/GameData/ROCapsules/PartConfigs/Starship/Vader111/StarshipLunarTank.cfg
@@ -21,17 +21,15 @@ PART
 	node_stack_top = 0.0, 11.3839, 0.0, 0.0, 1.0, 0.0, 3
 	node_stack_bottom = 0.0, -20.8054, 0.0, 0.0, -1.0, 0.0, 3
 
-	node_stack_RaptorSrf1 = 0.82251, -17.5, 0.474137 , 0.0, -1.0, 0.0, 2
-	node_stack_RaptorSrf2 = -0.82251, -17.5, 0.474137, 0.0, -1.0, 0.0, 2
-	node_stack_RaptorSrf3 = 0.0, -17.5, -0.948548, 0.0, -1.0, 0.0, 2
+	node_stack_RaptorSrf1 = 0.82251, -17.20, 0.474137 , 0.0, -1.0, 0.0, 2
+	node_stack_RaptorSrf2 = -0.82251, -17.20, 0.474137, 0.0, -1.0, 0.0, 2
+	node_stack_RaptorSrf3 = 0.0, -17.20, -0.948548, 0.0, -1.0, 0.0, 2
 
-	node_stack_RaptorVac1 = -2.6145, -16.25, -1.50787, 0.0, -1.0, 0.0, 2
-	node_stack_RaptorVac2 = 2.6145, -16.25, -1.50787, 0.0, -1.0, 0.0, 2
-	node_stack_RaptorVac3 = 0.0, -16.25, 3.02008, 0.0, -1.0, 0.0, 2
+	node_stack_RaptorVac1 = -2.6145, -16.0, -1.50787, 0.0, -1.0, 0.0, 2
+	node_stack_RaptorVac2 = 2.6145, -16.0, -1.50787, 0.0, -1.0, 0.0, 2
+	node_stack_RaptorVac3 = 0.0, -16.0, 3.02008, 0.0, -1.0, 0.0, 2
 
-	CoPOffset = 0.0, -8.0, 0.0
 	CoMOffset = 0.0, -10.0, 0.0
-	CoLOffset = 0.0, -12.0, 0.0
 
 	attachRules = 1,0,1,0,0
 
@@ -44,9 +42,9 @@ PART
 	entryCost = 1
 	category = FuelTank
 	subcategory = 0
-	title = Starship Lunar Fuel Tank & Legs
+	title = Starship Lunar Fuel Tank & Landing Legs
 	manufacturer = SpaceX
-	description = Starship Lunar Fuel Tank With Engine Clusters & Landing Legs.
+	description = Starship Lunar Fuel Tank With Engine Cluster & Landing Legs.
 	tags = Spacex, Starship, Lunar, Artemis, Legs
 	bulkheadProfiles = size3
 
@@ -54,14 +52,14 @@ PART
 	//	Thermo, Durability
 	//	============================================================================
 
-	mass = 30
+	mass = 50.125
 	dragModelType = default
 	breakingForce = 250
 	breakingTorque = 250
 	maximum_drag = 0.20
 	minimum_drag = 0.15
 	angularDrag = 2
-	crashTolerance = 12
+	crashTolerance = 20
 	maxTemp = 973.15
 	skinMaxTemp = 1073.15
 	emissiveConstant = 0.6 // not too absorptive for reentry
@@ -102,66 +100,6 @@ PART
 				localRotation = -90, 0, 0
 			}
 		}
-		deploy
-		{
-			AUDIO
-			{
-				channel = Ship
-				clip = Squad/Sounds/elev_start
-				volume = 0 0
-				volume = 1 0.5
-				pitch = 0.5
-			}
-			AUDIO_LOOP
-			{
-				channel = Ship
-				clip = Squad/Sounds/elev_loop
-				volume = 0 0
-				volume = 1 0.5
-				pitch = 0.5
-			}
-		}
-		deployed
-		{
-			AUDIO
-			{
-				channel = Ship
-				clip = Squad/Sounds/elev_stop
-				volume = 0 0
-				volume = 1 0.5
-				pitch = 0.5
-			}
-		}
-		retract
-		{
-			AUDIO
-			{
-				channel = Ship
-				clip = Squad/Sounds/elev_start
-				volume = 0 0
-				volume = 1 0.5
-				pitch = 0.5
-			}
-			AUDIO_LOOP
-			{
-				channel = Ship
-				clip = Squad/Sounds/elev_loop
-				volume = 0 0
-				volume = 1 0.5
-				pitch = 0.6
-			}
-		}
-		retracted
-		{
-			AUDIO
-			{
-				channel = Ship
-				clip = Squad/Sounds/elev_stop
-				volume = 0 0
-				volume = 1 0.5
-				pitch = 0.75
-			}
-		}
 	}
 
 	//	============================================================================
@@ -170,15 +108,8 @@ PART
 
 	MODULE
 	{
-		name = ModuleReactionWheel
-		PitchTorque = 65
-		YawTorque = 65
-		RollTorque = 65
-		RESOURCE
-		{
-			name = ElectricCharge
-			rate = 0.250
-		}
+		name = AdjustableCoMShifter
+		DescentModeCoM = 0.0, -10.0, 0.0
 	}
 
 	MODULE
@@ -186,6 +117,7 @@ PART
 		name = ModuleEnginesRF
 		thrustVectorTransformName = thrustTransform
 		EngineType = LiquidFuel
+		throttleResponseRate = 10
 	}
 
 	MODULE
@@ -201,8 +133,8 @@ PART
 	{
 		name = ModuleGimbal
 		gimbalTransformName = thrustTransform
-		gimbalRange = 5.0
-		gimbalResponseSpeed = 15
+		gimbalRange = 6.0
+		gimbalResponseSpeed = 16
 		useGimbalResponseSpeed = true
 	}
 
@@ -220,30 +152,29 @@ PART
 	{
 		name = ModuleEngineConfigs
 		type = ModuleEngines
-		configuration = Starship Lunar Engines
-
+		modded = false
+		configuration = StarshipLunar
 		CONFIG
 		{
-			name = Starship Lunar Engines
-			minThrust = 1345.14
-			maxThrust = 3362.85
-			heatProduction = 100
-
+			name = StarshipLunar
+			minThrust = 800.0
+			maxThrust = 2000.0
+			heatProduction = 160
 			PROPELLANT
 			{
 				name = LqdMethane
-				ratio = 0.4320
+				ratio = 0.43
 				DrawGauge = true
 			}
 			PROPELLANT
 			{
 				name = LqdOxygen
-				ratio = 0.5680
+				ratio = 0.57
 			}
 			atmosphereCurve
 			{
-				key = 0 380
-				key = 1 280
+				key = 0 340
+				key = 1 200
 			}
 
 			ullage = True
@@ -253,17 +184,17 @@ PART
 			IGNITOR_RESOURCE
 			{
 				name = ElectricCharge
-				amount = 0.5
+				amount = 1.0
 			}
 			IGNITOR_RESOURCE // Torch-Lit System uses the same propellant has the engines
 			{
 				name = LqdMethane
-				amount = 0.05
+				amount = 0.43
 			}
 			IGNITOR_RESOURCE // Torch-Lit System uses the same propellant has the engines
 			{
 				name = LqdOxygen
-				amount = 0.33
+				amount = 0.57
 			}
 		}
 	}
@@ -271,51 +202,60 @@ PART
 	MODULE
 	{
 		name = ModuleRCSFX
-		stagingEnabled = False
+		stagingEnabled = True
 		thrusterTransformName = rcsThrust
-		thrusterPower = 20.26
+		thrusterPower = 30
 		resourceFlowMode = STAGE_PRIORITY_FLOW
 		runningEffectName = running1
-		rcsEnabled = True
+		showToggles = False
 		PROPELLANT
 		{
 			name = LqdMethane
-			ratio = 0.05
+			ratio = 0.43
 		}
 		PROPELLANT
 		{
 			name = LqdOxygen
-			ratio = 0.33
+			ratio = 0.57
 		}
 		atmosphereCurve
 		{
-			key = 0 310
-			key = 1 174
+			key = 0 330
+			key = 1 240
 		}
 	}
 
 	MODULE
 	{
 		name = ModuleFuelTanks
-		volume = 1576074
+		volume = 1440230
 		type = Tank-Sep-Starship
 		basemass = -1
 		TANK
 		{
 			name = LqdMethane
-			amount = 677712
-			maxAmount = 677712
-			isTweakable = False
-			isDewar = True
+			amount = Full
+			maxAmount = 43.0%
 		}
 		TANK
 		{
 			name = LqdOxygen
-			amount = 898362
-			maxAmount = 898362
-			isTweakable = False
-			isDewar = True
+			amount = Full
+			maxAmount = 57.0%
 		}
+	}
+
+	MODULE
+	{
+		name = ModuleActiveRadiator
+		maxEnergyTransfer = 50000
+		overcoolFactor = 0.0186367
+		isCoreRadiator = true
+		RESOURCE
+		{
+			name = ElectricCharge
+			rate = 0.500
+		}		
 	}
 
 	//	============================================================================
@@ -326,114 +266,126 @@ PART
 	{
 		name = ModuleAdjustableLeg
 		LegDisplayName = LegA
-		BaseTransformName =	 LegBaseTransform001
+		BaseTransformName = LegBaseTransform001
 		FootTransformName = LegFootTransform001
 		LegID = LegA
 		ExtenderTransformName = Leg001
 		LegExtension = 0
-		ExtenderMin = 0.0
-		ExtenderMax = 1.18888
-		ExtensionRate = 0.8
-		PhysicsStaticFriction = 0.9
-		PhysicsDynamicFriction = 0.9
+		ExtenderMin = 0.02
+		ExtenderMax = 1.185
+		ExtensionRate = 4.0
+		PhysicsBounce = 0.0
+		PhysicsStaticFriction = 1.2
+		PhysicsDynamicFriction = 1.0
+		FeetPointOutwards = true
 	}
 
 	MODULE
 	{
 		name = ModuleAdjustableLeg
-		LegDisplayName =LegB
-		BaseTransformName =	 LegBaseTransform002
+		LegDisplayName = LegB
+		BaseTransformName =	LegBaseTransform002
 		FootTransformName = LegFootTransform002
 		LegID = LegB
 		ExtenderTransformName = Leg002
 		LegExtension = 0
-		ExtenderMin = 0.0
-		ExtenderMax = 1.18888
-		ExtensionRate = 0.8
-		PhysicsStaticFriction = 0.9
-		PhysicsDynamicFriction = 0.9
+		ExtenderMin = 0.02
+		ExtenderMax = 1.185
+		ExtensionRate = 4.0
+		PhysicsBounce = 0.0
+		PhysicsStaticFriction = 1.2
+		PhysicsDynamicFriction = 1.0
+		FeetPointOutwards = true
 	}
 
 	MODULE
 	{
 		name = ModuleAdjustableLeg
 		LegDisplayName = LegC
-		BaseTransformName =	 LegBaseTransform003
+		BaseTransformName =	LegBaseTransform003
 		FootTransformName = LegFootTransform003
 		LegID = LegC
 		ExtenderTransformName = Leg003
 		LegExtension = 0
-		ExtenderMin = 0.0
-		ExtenderMax = 1.18888
-		ExtensionRate = 0.8
-		PhysicsStaticFriction = 0.9
-		PhysicsDynamicFriction = 0.9
+		ExtenderMin = 0.02
+		ExtenderMax = 1.185
+		ExtensionRate = 4.0
+		PhysicsBounce = 0.0
+		PhysicsStaticFriction = 1.2
+		PhysicsDynamicFriction = 1.0
+		FeetPointOutwards = true
 	}
 
 	MODULE
 	{
 		name = ModuleAdjustableLeg
 		LegDisplayName = LegD
-		BaseTransformName =	 LegBaseTransform004
+		BaseTransformName =	LegBaseTransform004
 		FootTransformName = LegFootTransform004
 		LegID = LegD
 		ExtenderTransformName = Leg004
 		LegExtension = 0
-		ExtenderMin = 0.0
-		ExtenderMax = 1.18888
-		ExtensionRate = 0.8
-		PhysicsStaticFriction = 0.9
-		PhysicsDynamicFriction = 0.9
+		ExtenderMin = 0.02
+		ExtenderMax = 1.185
+		ExtensionRate = 4.0
+		PhysicsBounce = 0.0
+		PhysicsStaticFriction = 1.2
+		PhysicsDynamicFriction = 1.0
+		FeetPointOutwards = true
 	}
 
 	MODULE
 	{
 		name = ModuleAdjustableLeg
 		LegDisplayName = LegE
-		BaseTransformName =	 LegBaseTransform005
+		BaseTransformName =	LegBaseTransform005
 		FootTransformName = LegFootTransform005
 		LegID = LegE
 		ExtenderTransformName = Leg005
 		LegExtension = 0
-		ExtenderMin = 0.0
-		ExtenderMax = 1.18888
-		ExtensionRate = 0.8
-		PhysicsStaticFriction = 0.9
-		PhysicsDynamicFriction = 0.9
+		ExtenderMin = 0.02
+		ExtenderMax = 1.185
+		ExtensionRate = 4.0
+		PhysicsBounce = 0.0
+		PhysicsStaticFriction = 1.2
+		PhysicsDynamicFriction = 1.0
+		FeetPointOutwards = true
 	}
 
 	MODULE
 	{
 		name = ModuleAdjustableLeg
 		LegDisplayName = LegF
-		BaseTransformName =	 LegBaseTransform006
+		BaseTransformName =	LegBaseTransform006
 		FootTransformName = LegFootTransform006
 		LegID = LegF
 		ExtenderTransformName = Leg006
 		LegExtension = 0
-		ExtenderMin = 0.0
-		ExtenderMax = 1.18888
-		ExtensionRate = 0.8
-		PhysicsStaticFriction = 0.9
-		PhysicsDynamicFriction = 0.9
+		ExtenderMin = 0.02
+		ExtenderMax = 1.185
+		ExtensionRate = 4.0
+		PhysicsBounce = 0.0
+		PhysicsStaticFriction = 1.2
+		PhysicsDynamicFriction = 1.0
+		FeetPointOutwards = true
 	}
 
 	MODULE
 	{
 		name = ModuleLevelingBase
-		Automated = true
+		Automated = false
 		LevelingTransformName = LevelingTransform
-		LinkedExtensionMax = 1.18888
+		LinkedExtensionMax = 1.185
+		MinimumAutoLevelFraction = 30
 	}
 }
 
-@PART[ROC-StarshipLunarTank]:HAS[@MODULE[ModuleEngineConfigs]:HAS[@CONFIG[Starship?Lunar?Engines]],!MODULE[TestFlightInterop]]:BEFORE[zTestFlight]
-
+@PART[ROC-StarshipLunarTank]:HAS[@MODULE[ModuleEngineConfigs]:HAS[@CONFIG[StarshipLunar]],!MODULE[TestFlightInterop]]:BEFORE[zTestFlight]
 {
 	TESTFLIGHT
 	{
-		name = Starship Lunar Engines
-		ratedBurnTime = 3600 //Guess
+		name = StarshipLunar
+		ratedBurnTime = 2400 //Guess
 		ignitionReliabilityStart = 0.98 //Slight Chance of the Torch-lit system failing
 		ignitionReliabilityEnd = 0.995 //Slight Chance of the Torch-lit system failing
 		cycleReliabilityStart = 0.99975
@@ -441,9 +393,9 @@ PART
 	}
 }
 
-//	==================================================
+//	============================================================================
 //	Starship Lunar Engine Cluster (vacuum variant) plume setup.
-//	==================================================
+//	============================================================================
 
 @PART[ROC-StarshipLunarTank]:BEFORE[RealPlume]
 {
@@ -453,23 +405,23 @@ PART
 		transformName = thrustTransform
 		localRotation = 0,0,0
 		localPosition = 0,0.0,-0.75
-		fixedScale = 0.5
+		fixedScale = 0.25
 		energy = 1
 		speed = 1
 		emissionMult = 0.5
 		alphaMult = 1
 
-		flarePosition = 0,0,0.23
-		flareScale = 0.65
+		flarePosition = 0,0,0.15
+		flareScale = 0.75
 
-		plumePosition = 0,0,1.2
-		plumeScale = 4
+		plumePosition = 0,0,0.5
+		plumeScale = 1.5
 
-		fumePosition = 0,0,3.5
-		fumeScale = 4.2
+		fumePosition = 0,0,2.5
+		fumeScale = 1.5
 
-		shockPosition = 0,0,3
-		shockScale = 1.06
+		shockPosition = 0,0,2.5
+		shockScale = 0.5
 	}
 
 	@MODULE[ModuleEngines*]
@@ -484,5 +436,19 @@ PART
 		{
 			%powerEffectName = Methalox_Upper
 		}
+	}
+}
+
+@TANK_DEFINITION[Tank-Sep-Starship|Tank-Sep-Starship-HP]:FOR[zzzRealismOverhaul]
+{
+	@TANK[LqdMethane]
+	{
+		@wallConduction = 22
+		%isDewar = True
+	}
+	@TANK[LqdOxygen]
+	{
+		@wallConduction = 22
+		%isDewar = True
 	}
 }
