--- a/GameData/ROCapsules/PartConfigs/Starship/Vader111/TU_Support_StarshipLunar.cfg
+++ b/GameData/ROCapsules/PartConfigs/Starship/Vader111/TU_Support_StarshipLunar.cfg
@@ -2,6 +2,11 @@
 //	Vader111 Starship Lunar Textures Unlimited Support
 //	============================================================================
 
+@REFLECTION_CONFIG[default]
+{
+	%enabled = true
+}
+
 KSP_MODEL_SHADER
 {
 	name = ROC-StarshipLunarVader111
@@ -22,12 +27,12 @@ KSP_MODEL_SHADER
 		PROPERTY
 		{
 			name = _Metal
-			float = 0.25
+			float = 0.5
 		}
 		PROPERTY
 		{
 			name = _Smoothness
-			float = 0.5
+			float = 0.4
 		}
 	}
 }
@@ -35,29 +40,30 @@ KSP_MODEL_SHADER
 KSP_MODEL_SHADER
 {
 	name = ROC-StarshipLunarSolarVader111
-	
+
 	model = ROCapsules/Assets/Vader111/Starship/StarshipLunarCM
 
 	MATERIAL
 	{
 		shader = TU/Metallic
 
+		// CM Solar Panels
 		mesh = StarshipLunar3
 
 		PROPERTY
 		{
 			name = _Color
-			color = 2.0, 2.0, 2.0
+			color = 1.5, 1.5, 1.5 
 		}
 		PROPERTY
 		{
 			name = _Metal
-			float = 0.65
+			float = 0.85
 		}
 		PROPERTY
 		{
 			name = _Smoothness
-			float = 0.95
+			float = 0.75
 		}
 	}
 }
