--- a/GameData/ROCapsules/PartConfigs/Dragon/KK/Dragon2CM.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/KK/Dragon2CM.cfg
@@ -77,6 +77,7 @@ PART
 	skinMassPerArea = 4
 	bodyLiftOnlyUnattachedLift = True
 	bodyLiftOnlyAttachName = bottom
+	fuelCrossFeed = True
 
 	//	============================================================================
 	//	Animations and Textures
@@ -166,7 +167,7 @@ PART
 	MODULE
 	{
 		name = AdjustableCoMShifter
-		DescentModeCoM = 0, 0, -0.19
+		DescentModeCoM = 0, 0, -0.18
 	}
 
 	MODULE
@@ -177,6 +178,7 @@ PART
 		startEventGUIName = Open Cone
 		endEventGUIName	 = Close Cone
 		layer = 0
+		useMultipleDragCubes = true
 	}
 
 	MODULE
@@ -189,6 +191,7 @@ PART
 		toggleAction = True
 		defaultActionGroup = Light
 		layer = 2
+		useMultipleDragCubes = false
 	}
 
 	MODULE
@@ -219,50 +222,34 @@ PART
 
 	MODULE
 	{
-		name = ModuleLiftingSurface
-		useInternalDragModel = False
-		deflectionLiftCoeff = 1.4
-		liftingSurfaceCurve = CapsuleBottom
-		disableBodyLift = False
-		omnidirectional = False
-		perpendicularOnly = True
-		transformDir = Y
-		transformSign = -1
-		nodeEnabled = True
-		attachNodeName = bottom
-	}
-
-	MODULE
-	{
 		name = ModuleEnginesRF
 		thrustVectorTransformName = smokePoint
 		EngineType = LiquidFuel
-		throttleResponseRate = 100
+		throttleResponseRate = 1000
 	}
 
 	MODULE
 	{
 		name = ModuleEngineConfigs
 		type = ModuleEngines
-		configuration = Dragon SuperDracos
-
+		modded = false
+		configuration = DragonV2SuperDracos
 		CONFIG
 		{
-			name = Dragon SuperDracos
+			name = DragonV2SuperDracos
 			minThrust = 136
 			maxThrust = 680
 			heatProduction = 100
-
 			PROPELLANT
 			{
 				name = MMH
-				ratio = 0.5629
+				ratio = 0.559
 				DrawGauge = True
 			}
 			PROPELLANT
 			{
 				name = NTO
-				ratio = 0.4371
+				ratio = 0.441
 				DrawGauge = False		
 			}
 			atmosphereCurve
@@ -305,12 +292,12 @@ PART
 	MODULE
 	{
 		name = ModuleRCSFX
-		stagingEnabled = False
+		stagingEnabled = True
 		thrusterTransformName = draco
 		thrusterPower = 0.4
 		resourceFlowMode = STAGE_PRIORITY_FLOW
 		runningEffectName = running1
-		rcsEnabled = True
+		showToggles = False
 		enableYaw = True
 		enablePitch = True
 		enableRoll = True
@@ -320,12 +307,12 @@ PART
 		PROPELLANT
 		{
 			name = MMH
-			ratio = 0.5629
+			ratio = 0.559
 		}
 		PROPELLANT
 		{
 			name = NTO
-			ratio = 0.4371
+			ratio = 0.441
 		}
 		atmosphereCurve
 		{
@@ -337,12 +324,12 @@ PART
 	MODULE
 	{
 		name = ModuleRCSFX
-		stagingEnabled = False
+		stagingEnabled = True
 		thrusterTransformName = draco_top
 		thrusterPower = 0.4
 		resourceFlowMode = STAGE_PRIORITY_FLOW
 		runningEffectName = running2
-		rcsEnabled = True
+		showToggles = False
 		enableYaw = False
 		enablePitch = False
 		enableRoll = False
@@ -352,12 +339,12 @@ PART
 		PROPELLANT
 		{
 			name = MMH
-			ratio = 0.5629
+			ratio = 0.559
 		}
 		PROPELLANT
 		{
 			name = NTO
-			ratio = 0.4371
+			ratio = 0.441
 		}
 		atmosphereCurve
 		{
@@ -370,29 +357,42 @@ PART
 	{
 		name = ModuleFuelTanks
 		type = ServiceModule
-		volume = 1140.5
+		volume = 1149.039
 		basemass = -1
 		TANK
 		{
 			name = MMH
-			amount = 637.5
-			maxAmount = 637.5
-			isTweakable = False
+			amount = 642.31
+			maxAmount = 642.31
 		}
 		TANK
 		{
 			name = NTO
-			amount = 502.5
-			maxAmount = 502.5
-			isTweakable = False
+			amount = 506.72
+			maxAmount = 506.72
 		}
 		TANK
 		{
 			name = ElectricCharge
 			amount = 50000
 			maxAmount = 50000
-			isTweakable = False
 		}
+	}
+
+	MODULE:NEEDS[KIS]
+	{
+		name = ModuleKISInventory
+		maxVolume = 1500
+		externalAccess = false
+		internalAccess = true
+		slotsX = 2
+		slotsY = 2
+		slotSize = 50
+		itemIconResolution = 128
+		selfIconResolution = 128
+		openSndPath = KIS/Sounds/containerOpen
+		closeSndPath = KIS/Sounds/containerClose
+		defaultMoveSndPath = KIS/Sounds/itemMove
 	}
 }
 
@@ -407,15 +407,15 @@ PART
 	MODULE
 	{
 		name = ModuleRealAntenna
-		antennaDiameter = 0.8
-		RFBand = S	//Default to S-band
+		referenceGain = 1.5
+		RFBand = UHF		//Default to UHF-band
 	}
 
 	MODULE
 	{
 		name = ModuleRealAntenna
-		referenceGain = 1.5
-		RFBand = UHF		//Default to UHF-band
+		antennaDiameter = 0.8
+		RFBand = S	//Default to S-band
 	}
 }
 
@@ -423,11 +423,11 @@ PART
 //	Configure TestFlight
 //	================================================================================
 
-@PART[ROC-Dragon2CM]:HAS[@MODULE[ModuleEngineConfigs]:HAS[@CONFIG[Dragon?SuperDracos]],!MODULE[TestFlightInterop]]:BEFORE[zTestFlight]
+@PART[ROC-Dragon2CM]:HAS[@MODULE[ModuleEngineConfigs]:HAS[@CONFIG[DragonV2SuperDracos]],!MODULE[TestFlightInterop]]:BEFORE[zTestFlight]
 {
 	TESTFLIGHT
 	{
-		name = Dragon SuperDracos
+		name = DragonV2SuperDracos
 		ratedBurnTime = 350
 		ignitionReliabilityStart = 0.98
 		ignitionReliabilityEnd = 0.995
@@ -466,52 +466,52 @@ PART
 
 @PART[ROC-Dragon2CM]:AFTER[RealismOverhaul]:NEEDS[TacLifeSupport]
 {
-	@description ^= :$: Supports a crew of 6 for 3 days.:
+	@description ^= :$: Supports a crew of 4 for 3 days.:
 
 	@MODULE[ModuleFuelTanks]
 	{
-		@volume += 328.60
+		@volume += 219.07
 
 		TANK
 		{
 			name = Food
-			amount = 105.3
-			maxAmount = 105.3
+			amount = 70.2
+			maxAmount = 70.2
 		}
 
 		TANK
 		{
 			name = Water
-			amount = 57.54
-			maxAmount = 57.54
+			amount = 38.36
+			maxAmount = 38.36
 		}
 
 		TANK
 		{
 			name = Oxygen
-			amount = 10659.58
-			maxAmount = 10659.58
+			amount = 7106.39
+			maxAmount = 7106.39
 		}
 
 		TANK
 		{
 			name = Waste
 			amount = 0
-			maxAmount = 9.58
+			maxAmount = 6.39
 		}
 
 		TANK
 		{
 			name = WasteWater
 			amount = 0
-			maxAmount = 88.64
+			maxAmount = 59.09
 		}
 
 		TANK
 		{
 			name = CarbonDioxide
 			amount = 0
-			maxAmount = 9207.59
+			maxAmount = 6138.4
 		}
 	}
 
