--- a/GameData/ROCapsules/PartConfigs/Dragon/KK/TU_Support_V2Dragon.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/KK/TU_Support_V2Dragon.cfg
@@ -2,39 +2,38 @@
 //	KK Dragon Textures Unlimited Support
 //	============================================================================
 
+@REFLECTION_CONFIG[default]
+{
+	%enabled = true
+}
+
 KSP_MODEL_SHADER
 {
 	name = ROC-DragonKK
 
 	model = ROCapsules/Assets/KK/Dragon/Dragon2CargoSM
 	model = ROCapsules/Assets/KK/Dragon/Dragon2SM
-	model = ROCapsules/Assets/KK/Dragon/Dragon2DP
 
 	MATERIAL
 	{
 		shader = TU/Metallic
 
-		inheritTexture = _MainTex
-		inheritTexture = _BumpMap
-		inheritTexture = _Emissive
-
 		mesh = trunk_blue
-		mesh = dockingport
 
 		PROPERTY
 		{
 			name = _Color
-			color = 2.0, 2.0, 2.0
+			color = 1.5, 1.5, 1.5 
 		}
 		PROPERTY
 		{
 			name = _Metal
-			float = 0.65
+			float = 0.7
 		}
 		PROPERTY
 		{
 			name = _Smoothness
-			float = 0.75
+			float = 0.65
 		}
 	}
 }
