--- a/GameData/ROCapsules/PartConfigs/Dragon/PhoenixIndustries/DragonCM.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/PhoenixIndustries/DragonCM.cfg
@@ -67,6 +67,7 @@ PART
 	skinMassPerArea = 4
 	bodyLiftOnlyUnattachedLift = True
 	bodyLiftOnlyAttachName = bottom
+	fuelCrossFeed = True
 
 	//	============================================================================
 	//	Animations and Textures
@@ -75,6 +76,33 @@ PART
 	EFFECTS
 	{
 		running1
+		{
+			AUDIO_MULTI_POOL
+			{
+				channel = Ship
+				transformName = rcsThrustMain
+				clip = sound_rocket_mini
+				volume = 0.0 0.0
+				volume = 0.02 0.1
+				volume = 0.5 0.1
+				volume = 1.0 0.1
+				pitch = 0.0 0.75
+				pitch = 1.0 1.5
+				loop = true
+			}
+			MODEL_MULTI_PARTICLE
+			{
+				modelName = Squad/FX/Monoprop_small
+				transformName = rcsThrustMain
+				emission = 0.0 0.0
+				emission = 0.1 0.0
+				emission = 1.0 1.0
+				speed = 0.0 0.8
+				speed = 1.0 1.0
+				localRotation = -90, 0, 0
+			}
+		}
+		running2
 		{
 			AUDIO_MULTI_POOL
 			{
@@ -129,7 +157,7 @@ PART
 	MODULE
 	{
 		name = AdjustableCoMShifter
-		DescentModeCoM = 0, 0, -0.19
+		DescentModeCoM = 0, 0, -0.18
 	}
 
 	MODULE
@@ -144,37 +172,60 @@ PART
 
 	MODULE
 	{
-		name = ModuleLiftingSurface
-		useInternalDragModel = False
-		deflectionLiftCoeff = 1.4
-		liftingSurfaceCurve = CapsuleBottom
-		disableBodyLift = False
-		omnidirectional = False
-		perpendicularOnly = True
-		transformDir = Y
-		transformSign = -1
-		nodeEnabled = True
-		attachNodeName = bottom
+		name = ModuleRCSFX
+		stagingEnabled = True
+		thrusterTransformName = rcsThrustMain
+		thrusterPower = 0.4
+		resourceFlowMode = STAGE_PRIORITY_FLOW
+		runningEffectName = running1
+		showToggles = False
+		enableYaw = False
+		enablePitch = False
+		enableRoll = False
+		enableX = False
+		enableY = False
+		enableZ = True
+		PROPELLANT
+		{
+			name = MMH
+			ratio = 0.559
+		}
+		PROPELLANT
+		{
+			name = NTO
+			ratio = 0.441
+		}
+		atmosphereCurve
+		{
+			key = 0 300
+			key = 1 82.08
+		}
 	}
 
 	MODULE
 	{
 		name = ModuleRCSFX
-		stagingEnabled = False
+		stagingEnabled = True
 		thrusterTransformName = rcsThrust
 		thrusterPower = 0.4
 		resourceFlowMode = STAGE_PRIORITY_FLOW
-		runningEffectName = running1
-		rcsEnabled = True
+		runningEffectName = running2
+		showToggles = False
+		enableYaw = True
+		enablePitch = True
+		enableRoll = True
+		enableX = True
+		enableY = True
+		enableZ = True
 		PROPELLANT
 		{
 			name = MMH
-			ratio = 0.5629
+			ratio = 0.559
 		}
 		PROPELLANT
 		{
 			name = NTO
-			ratio = 0.4371
+			ratio = 0.441
 		}
 		atmosphereCurve
 		{
@@ -187,29 +238,42 @@ PART
 	{
 		name = ModuleFuelTanks
 		type = ServiceModule
-		volume = 1140.5
+		volume = 1149.039
 		basemass = -1
 		TANK
 		{
 			name = MMH
-			amount = 637.5
-			maxAmount = 637.5
-			isTweakable = False
+			amount = 642.31
+			maxAmount = 642.31
 		}
 		TANK
 		{
 			name = NTO
-			amount = 502.5
-			maxAmount = 502.5
-			isTweakable = False
+			amount = 506.72
+			maxAmount = 506.72
 		}
 		TANK
 		{
 			name = ElectricCharge
 			amount = 50000
 			maxAmount = 50000
-			isTweakable = False
 		}
+	}
+
+	MODULE:NEEDS[KIS]
+	{
+		name = ModuleKISInventory
+		maxVolume = 1000
+		externalAccess = false
+		internalAccess = true
+		slotsX = 2
+		slotsY = 2
+		slotSize = 50
+		itemIconResolution = 128
+		selfIconResolution = 128
+		openSndPath = KIS/Sounds/containerOpen
+		closeSndPath = KIS/Sounds/containerClose
+		defaultMoveSndPath = KIS/Sounds/itemMove
 	}
 }
 
@@ -224,15 +288,15 @@ PART
 	MODULE
 	{
 		name = ModuleRealAntenna
-		antennaDiameter = 0.8
-		RFBand = S	//Default to S-band
+		referenceGain = 1.5
+		RFBand = UHF		//Default to UHF-band
 	}
 
 	MODULE
 	{
 		name = ModuleRealAntenna
-		referenceGain = 1.5
-		RFBand = UHF		//Default to UHF-band
+		antennaDiameter = 0.8
+		RFBand = S	//Default to S-band
 	}
 }
 
@@ -254,7 +318,8 @@ PART
 		{
 			name = Food
 			amount = 0
-			maxAmount = 10061.78
+			maxAmount = 1061.78
+
 		}
 
 		TANK
