--- a/GameData/ROCapsules/PartConfigs/Dragon/PhoenixIndustries/DragonSM.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/PhoenixIndustries/DragonSM.cfg
@@ -20,12 +20,11 @@ PART
 	rescaleFactor = 1.5
 
 	node_stack_top = 0.0, 0.766667, 0.0, 0.0, 1.0, 0.0, 1
-	node_stack_bottom = 0.0, -1.25334, 0.0, 0.0, -1.0, 0.0, 3
-	node_stack_trunk = 0.0, 0.56336, 0.0, 0.0, -1.0, 0.0, 2
+	node_stack_bottom = 0.0, -1.26375, 0.0, 0.0, -1.0, 0.0, 3
 	node_stack_solarattach1 = -1, -0.260033, -0.066753, 0.0, 1.0, 0.0, 2
 	node_stack_solarattach2 = 1, -0.260033, -0.066753, 0.0, -1.0, 0.0, 2
-	node_stack_fairingattach1 = -1.17, 0.63, 0, 0.0, 1.0, 0.0, 2
-	node_stack_fairingattach2 = 1.17, 0.63, 0, 0.0, 1.0, 0.0, 2
+	node_stack_fairingattach1 = -1.17, 0.63, 0, 1.0, 0.0, 0.0, 2
+	node_stack_fairingattach2 = 1.17, 0.63, 0, -1.0, 0.0, 0.0, 2
 
 	attachRules = 1,0,1,1,0
 
@@ -73,19 +72,54 @@ PART
 
 	MODULE
 	{
-		name = ModuleDecouple
-		menuName = Decouple Trunk Storage
-		ejectionForce = 10
-		isOmniDecoupler = false
-		explosiveNodeID = trunk
+		name = ModuleFuelTanks
+		type = ServiceModule
+		volume = 50
+		basemass = -1
+		TANK
+		{
+			name = ElectricCharge
+			amount = 50000
+			maxAmount = 50000
+		}
+	}
+
+	MODULE
+	{
+		name = ModuleActiveRadiator
+		maxEnergyTransfer = 10000
+		overcoolFactor = 0.25
+		isCoreRadiator = true
+		parentCoolingOnly = true
+		RESOURCE
+		{
+			name = ElectricCharge
+			rate = 0.100
+		}
 	}
 
 	MODULE
 	{
 		name = ModuleDecouple
 		menuName = Jettison Trunk
-		ejectionForce = 100
-		isOmniDecoupler = false
+		ejectionForce = 75
+		isOmniDecoupler = False
 		explosiveNodeID = top
+	}
+
+	MODULE:NEEDS[KIS]
+	{
+		name = ModuleKISInventory
+		maxVolume = 2000
+		externalAccess = true
+		internalAccess = false
+		slotsX = 3
+		slotsY = 3
+		slotSize = 50
+		itemIconResolution = 128
+		selfIconResolution = 128
+		openSndPath = KIS/Sounds/containerOpen
+		closeSndPath = KIS/Sounds/containerClose
+		defaultMoveSndPath = KIS/Sounds/itemMove
 	}
 }
