--- a/GameData/ROCapsules/PartConfigs/Starship/Vader111/StarshipLunarCM.cfg
+++ b/GameData/ROCapsules/PartConfigs/Starship/Vader111/StarshipLunarCM.cfg
@@ -15,7 +15,7 @@ PART
 		model = ROCapsules/Assets/Vader111/Starship/StarshipLunarCM
 	}
 
-	INTERNAL //Crap Internal Model, So please don't judge me
+	INTERNAL // Crap Internal Model, I "MIGHT" improve it in the future.
 	{
 		name = ROC-StarshipLunarInterior
 	}
@@ -25,6 +25,8 @@ PART
 
 	node_stack_top = 0.0, 16.199, 0.0, 0.0, 1.0, 0.0, 1
 	node_stack_bottom = 0.0, 0.0, 0.0, 0.0, -1.0, 0.0, 3
+
+	CoMOffset = 0.0, -10.0, 0.0
 
 	attachRules = 1,0,1,0,0
 
@@ -51,14 +53,14 @@ PART
 	//	Thermo, Durability
 	//	============================================================================
 
-	mass = 14.5
+	mass = 23.875
 	dragModelType = default
 	breakingForce = 250
 	breakingTorque = 250
 	maximum_drag = 0.20
 	minimum_drag = 0.15
 	angularDrag = 2
-	crashTolerance = 12
+	crashTolerance = 20
 	maxTemp = 973.15
 	skinMaxTemp = 1073.15
 	emissiveConstant = 0.6 // not too absorptive for reentry
@@ -85,6 +87,20 @@ PART
 
 	MODULE
 	{
+		name = ModuleReactionWheel
+		PitchTorque = 50
+		YawTorque = 50
+		RollTorque = 50
+		torqueResponseSpeed = 25
+		RESOURCE
+		{
+			name = ElectricCharge
+			rate = 0.500
+		}
+	}
+
+	MODULE
+	{
 		name = ModuleSAS
 		SASServiceLevel = 3
 	}
@@ -103,15 +119,30 @@ PART
 	{
 		name = ModuleFuelTanks
 		type = ServiceModule
-		volume = 1
+		volume = 200
 		basemass = -1
 		TANK
 		{
 			name = ElectricCharge
-			amount = 100000
-			maxAmount = 100000
-			isTweakable = False
+			amount = 200000
+			maxAmount = 200000
 		}
+	}
+
+	MODULE:NEEDS[KIS]
+	{
+		name = ModuleKISInventory
+		maxVolume = 10000
+		externalAccess = false
+		internalAccess = true
+		slotsX = 5
+		slotsY = 5
+		slotSize = 50
+		itemIconResolution = 128
+		selfIconResolution = 128
+		openSndPath = KIS/Sounds/containerOpen
+		closeSndPath = KIS/Sounds/containerClose
+		defaultMoveSndPath = KIS/Sounds/itemMove
 	}
 
 	MODULE
@@ -130,7 +161,7 @@ PART
 
 	SolarConfig
 	{
-		area = 50.0
+		area = 53.4004
 		level = 7
 		type = static
 	}
@@ -147,15 +178,15 @@ PART
 	MODULE
 	{
 		name = ModuleRealAntenna
-		antennaDiameter = 0.8
-		RFBand = S	//Default to S-band
+		referenceGain = 1.5
+		RFBand = UHF		//Default to UHF-band
 	}
 
 	MODULE
 	{
 		name = ModuleRealAntenna
-		referenceGain = 1.5
-		RFBand = UHF	//Default to UHF-band
+		antennaDiameter = 0.8
+		RFBand = Ka	//Default to Ka-band
 	}
 }
 
