Fix KSP 1.11 Loading Hang issue

--- a/GameData/ROCapsules/PartConfigs/LEM/LEMAscent.cfg
+++ b/GameData/ROCapsules/PartConfigs/LEM/LEMAscent.cfg
@@ -146,15 +146,16 @@ PART
 		heatProduction = 20
 	}
 
-    MODULE
-    {
-        name = ModuleAnimateGeneric
-        animationName = Antenna
-        startEventGUIName = Extend HGA
-        endEventGUIName = Retract HGA
-        actionGUIName = Toggle HGA
+	MODULE
+	{
+		name = ModuleAnimateGeneric
+		animationName = Antenna
+		startEventGUIName = Extend HGA
+		endEventGUIName = Retract HGA
+		actionGUIName = Toggle HGA
 		allowAnimationWhileShielded = False
-    }
+		useMultipleDragCubes = false
+	}
 
 	MODULE
 	{
@@ -164,6 +165,7 @@ PART
 		endEventGUIName = Turn Off Cabin Lights
 		actionGUIName = Toggle Cabin Lights
 		defaultActionGroup = Light
+		useMultipleDragCubes = false
 	}
 
 	MODULE
@@ -174,6 +176,7 @@ PART
 		endEventGUIName = Deactivate Docking Lights
 		actionGUIName = Toggle Docking Lights
 		defaultActionGroup = Light
+		useMultipleDragCubes = false
 	}
 
 	MODULE
