Add Waterfall support for all parts.

--- a/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloEngineBlockIII.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloEngineBlockIII.cfg
@@ -121,7 +121,7 @@ PART
 //	Block III SPS plume configuration.
 //	==================================================
 
-@PART[ROC-ApolloEngineBlockIII]:BEFORE[RealPlume]
+@PART[ROC-ApolloEngineBlockIII]:BEFORE[RealPlume]:NEEDS[!Waterfall]
 {
 	PLUME
 	{
