--- a/GameData/ROCapsules/PartConfigs/LEM/LEMAscent.cfg
+++ b/GameData/ROCapsules/PartConfigs/LEM/LEMAscent.cfg
@@ -334,7 +334,7 @@ PART
 				speed = 1.0 1.0
 				localRotation = -90, 0, 0
 			}
-		}		
+		}
 		engage
 		{
 			AUDIO
@@ -362,7 +362,7 @@ PART
 				pitch = 2.0
 				loop = false
 			}
-		}	
+		}
 	}
 }
 
@@ -583,7 +583,7 @@ PART
 					name = ASET_NUMINPUT_DISPLAY_DIFFUSE_PASSIVECOLOR
 					color= 0,40,0,255
 			}
-				
+
 			COLORDEFINITION
 			{
 					name = ASET_NUMINPUT_DISPLAY_EMISSIVE_ACTIVECOLOR
@@ -608,7 +608,7 @@ PART
 			}
 			COLORDEFINITION
 			{
-				name = ASET_NUMINPUT_DISPLAY_NEGATIVECOLOR 
+				name = ASET_NUMINPUT_DISPLAY_NEGATIVECOLOR
 				color= 0,0,0,255
 			}
 			COLORDEFINITION
@@ -680,7 +680,7 @@ PART
 			{
 				name = ASET_PLATETEXT_ZEROCOLOR
 				color= 255,255,255,255
-			}	
+			}
 		}
 	}
 }
@@ -792,7 +792,7 @@ PART
 //	Lunar Module ascent stage plume configuration.
 //	==================================================
 
-@PART[ROC-LEMAscent]:BEFORE[RealPlume]
+@PART[ROC-LEMAscent]:BEFORE[RealPlume]:NEEDS[!Waterfall]
 {
 	PLUME
 	{
