--- a/GameData/ROCapsules/PartConfigs/Vostok/VostokService.cfg
+++ b/GameData/ROCapsules/PartConfigs/Vostok/VostokService.cfg
@@ -42,7 +42,7 @@ PART
 	//	============================================================================
 	//	Thermo, Durability
 	//	============================================================================
-	
+
 	mass = 1.924
 	dragModelType = default
 	maximum_drag = 0.2
@@ -234,7 +234,7 @@ PART
 	//  ============================================================================
 	//	Comms
 	//  ============================================================================
-	
+
 	MODULE:NEEDS[!RemoteTech]
 	{
 		name = ModuleDataTransmitter
@@ -245,12 +245,12 @@ PART
 		antennaPower = 400
 		packetResourceCost = 0.004
 	}
-	
+
 	MODULE:NEEDS[RemoteTech]
 	{
 		name = ModuleSPUPassive
 	}
-	
+
 	MODULE:NEEDS[RemoteTech]
 	{
 		name = ModuleRTAntennaPassive
@@ -283,7 +283,7 @@ PART
 //	Configure RealPlume
 //	================================================================================
 
-@PART[ROC-VostokService]:BEFORE[RealPlume]
+@PART[ROC-VostokService]:BEFORE[RealPlume]:NEEDS[!Waterfall]
 {
 	PLUME
 	{
