--- a/GameData/ROCapsules/PartConfigs/CST/CSTRS88.cfg
+++ b/GameData/ROCapsules/PartConfigs/CST/CSTRS88.cfg
@@ -98,7 +98,7 @@ PART
 //	CST RealPlume Support
 //	============================================================================
 
-@PART[ROC-CSTRS88]:BEFORE[RealPlume]:NEEDS[SmokeScreen]
+@PART[ROC-CSTRS88]:BEFORE[RealPlume]:NEEDS[SmokeScreen,!Waterfall]
 {
 	PLUME
 	{
