--- a/GameData/ROCapsules/PartConfigs/LEM/LEM-LMDE.cfg
+++ b/GameData/ROCapsules/PartConfigs/LEM/LEM-LMDE.cfg
@@ -131,7 +131,7 @@ PART
 				speed = 1.0 1.0
 				//localOffset = 0, 0, 1
 			}
-		}	
+		}
 		engage
 		{
 			AUDIO
@@ -159,7 +159,7 @@ PART
 				pitch = 2.0
 				loop = false
 			}
-		}	
+		}
 	}
 }
 
@@ -167,7 +167,7 @@ PART
 //	Lunar Module Descent Engine plume configuration.
 //	==================================================
 
-@PART[ROC-LEM-LMDE]:BEFORE[RealPlume]
+@PART[ROC-LEM-LMDE]:BEFORE[RealPlume]:NEEDS[!Waterfall]
 {
 	PLUME
 	{
