Remodel the Dragon XL and fix CoM Related RCS Issues.
Remove Starship Lunar until i can fix the legs.

--- a/GameData/ROCapsules/PartConfigs/DragonXL/Vader111/DragonXL.cfg
+++ b/GameData/ROCapsules/PartConfigs/DragonXL/Vader111/DragonXL.cfg
@@ -18,9 +18,12 @@ PART
 	scale = 1.0
 	rescaleFactor = 1.0
 
-	node_stack_top = 0.0, 4.835, 0.0, 0.0, 1.0, 0.0, 2
-	node_stack_SolarAttach1 = 2.01807, -3.48542, 0.26229, 0.0, -1.0, 0.0, 2
-	node_stack_SolarAttach2 = -2.01807, -3.48542, -0.26229, 0.0, 1.0, 0.0, 2
+	node_stack_top = 0.0, 3.86956, 0.0, 0.0, 1.0, 0.0, 2
+	node_stack_Stage = 0.0, -2.65968, 0.0, 0.0, 1.0, 0.0, 2
+	node_stack_SolarAttach1 = 1.73567, -1.60692, 0.0, 0.0, -1.0, 0.0, 2
+	node_stack_SolarAttach2 = -1.73567, -1.60692, 0.0, 0.0, 1.0, 0.0, 2
+
+	CoMOffset = 0.0, 3.4, 0.0
 
 	attachRules = 1,0,1,1,0
 
@@ -47,7 +50,7 @@ PART
 	//	Thermo, Durability
 	//	============================================================================
 
-	mass = 4.5
+	mass = 5.65
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.3
@@ -73,7 +76,7 @@ PART
 			AUDIO_MULTI_POOL
 			{
 				channel = Ship
-				transformName = rcsThrust
+				transformName = rcs1
 				clip = sound_rocket_mini
 				volume = 0.0 0.0
 				volume = 0.02 0.1
@@ -86,7 +89,34 @@ PART
 			MODEL_MULTI_PARTICLE
 			{
 				modelName = Squad/FX/Monoprop_small
-				transformName = rcsThrust
+				transformName = rcs1
+				emission = 0.0 0.0
+				emission = 0.1 0.0
+				emission = 1.0 1.0
+				speed = 0.0 0.8
+				speed = 1.0 1.0
+				localRotation = -90, 0, 0
+			}
+		}
+		running2
+		{
+			AUDIO_MULTI_POOL
+			{
+				channel = Ship
+				transformName = rcs2
+				clip = sound_rocket_mini
+				volume = 0.0 0.0
+				volume = 0.02 0.1
+				volume = 0.5 0.1
+				volume = 1.0 0.1
+				pitch = 0.0 0.75
+				pitch = 1.0 1.5
+				loop = true
+			}
+			MODEL_MULTI_PARTICLE
+			{
+				modelName = Squad/FX/Monoprop_small
+				transformName = rcs2
 				emission = 0.0 0.0
 				emission = 0.1 0.0
 				emission = 1.0 1.0
@@ -110,6 +140,12 @@ PART
 		defaultControlPointDisplayName = Prograde
 		CONTROLPOINT
 		{
+			name = forward
+			displayName = Prograde
+			orientation = 0,0,0
+		}
+		CONTROLPOINT
+		{
 			name = reverse
 			displayName = Retrograde
 			orientation = 0,0,180
@@ -131,11 +167,49 @@ PART
 	{
 		name = ModuleRCSFX
 		stagingEnabled = True
-		thrusterTransformName = rcsThrust
+		thrusterTransformName = rcs1
 		thrusterPower = 0.4
 		resourceFlowMode = STAGE_PRIORITY_FLOW
 		runningEffectName = running1
 		showToggles = False
+		enableYaw = False
+		enablePitch = False
+		enableRoll = False
+		enableX = False
+		enableY = False
+		enableZ = True
+		PROPELLANT
+		{
+			name = MMH
+			ratio = 0.559
+		}
+		PROPELLANT
+		{
+			name = NTO
+			ratio = 0.441
+		}
+		atmosphereCurve
+		{
+			key = 0 300
+			key = 1 82.08
+		}
+	}
+
+	MODULE
+	{
+		name = ModuleRCSFX
+		stagingEnabled = True
+		thrusterTransformName = rcs2
+		thrusterPower = 0.4
+		resourceFlowMode = STAGE_PRIORITY_FLOW
+		runningEffectName = running2
+		showToggles = False
+		enableYaw = True
+		enablePitch = True
+		enableRoll = True
+		enableX = True
+		enableY = True
+		enableZ = True
 		PROPELLANT
 		{
 			name = MMH
