--- a/GameData/ROCapsules/PartConfigs/DragonXL/Vader111/TU_Support_DragonXL.cfg
+++ b/GameData/ROCapsules/PartConfigs/DragonXL/Vader111/TU_Support_DragonXL.cfg
@@ -18,6 +18,8 @@ KSP_MODEL_SHADER
 	{
 		shader = TU/Metallic
 
+		excludeMesh = DragonXLTexture5
+
 		PROPERTY
 		{
 			name = _Color
@@ -34,29 +36,22 @@ KSP_MODEL_SHADER
 			float = 0.4
 		}
 	}
-}
-
-KSP_MODEL_SHADER
-{
-	name = ROC-DragonXLFoilVader111
-
-	model = ROCapsules/Assets/Vader111/DragonXL/DragonXL
 
 	MATERIAL
 	{
 		shader = TU/Metallic
 
-		mesh = DragonXLTexture4
+		mesh = DragonXLTexture5
 
         PROPERTY
 		{
 			name = _Color
-			color = 2.0, 2.0, 2.0
+			color = 1.5, 1.5, 1.5
 		}
 		PROPERTY
 		{
 			name = _Metal
-			float = 0.5
+			float = 0.55
 		}
 		PROPERTY
 			{
