Adjust CoM to Fix RCS related issues.
Add Waterfall Support.

--- a/GameData/ROCapsules/PartConfigs/Dragon/PhoenixIndustries/DragonCM.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/PhoenixIndustries/DragonCM.cfg
@@ -23,6 +23,8 @@ PART
 	node_stack_bottom = 0.0, -0.709287, 0.0, 0.0, -1.0, 0.0, 3
 	node_stack_Chute = 0.0, 0.986667, -0.666667, 0.0, -1.0, 0.0, 2
 
+	CoMOffset = 0.0, -0.325, 0.0
+
 	CenterOfBuoyancy = 0.0, 1.5, 0.0
 	buoyancyUseSine = False
 	buoyancy = 1.1
