--- a/GameData/ROCapsules/PartConfigs/Dragon/PhoenixIndustries/DragonCap.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/PhoenixIndustries/DragonCap.cfg
@@ -19,7 +19,7 @@ PART
 	scale = 1.0
 	rescaleFactor = 1.5
 
-	node_stack_bottom = 0.0, 0.1986495, 0.0, 0.0, -1.0, 0.0, 1
+	node_stack_bottom = 0.0, 0.5925, 0.0, 0.0, -1.0, 0.0, 1
 
 	attachRules = 1,0,1,0,0
 
@@ -54,7 +54,7 @@ PART
 	angularDrag = 2
 	crashTolerance = 12
 	maxTemp = 973.15
-	skinMaxTemp = 2673.15
+	skinMaxTemp = 1073.15
 	emissiveConstant = 0.6
 	thermalMassModifier = 1.0
 	skinMassPerArea = 4
